--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     </div>
 
     <script src="./app.js"></script>
+    <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+    <script src="/liff-config.js"></script>
 </body>
 
 </html>
